@@ -128,12 +128,6 @@
     		<version>0.8.1</version>
 		</dependency>
     
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.0.3</version>
-            <scope>test</scope>
-        </dependency>
         
         <dependency>
         	<groupId>mysql</groupId>
@@ -154,23 +148,7 @@
     		<artifactId>javafx-fxml</artifactId>
 		    <version>11.0.2</version>
 		</dependency>
-         <dependency>
-             <groupId>org.openjfx</groupId>
-             <artifactId>javafx-controls</artifactId>
-             <version>11.0.2</version>
-         </dependency>
-         <dependency>
-             <groupId>org.openjfx</groupId>
-             <artifactId>javafx-graphics</artifactId>
-             <version>11.0.2</version>
-         </dependency>
          <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
-<dependency>
-    <groupId>org.openjfx</groupId>
-    <artifactId>javafx-base</artifactId>
-    <version>11.0.2</version>
-</dependency>
-         
         <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
@@ -204,6 +182,25 @@
     <version>2.6</version>
 </dependency>
 
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.7.0</version>
+    <scope>test</scope>
+</dependency>
+
+
+<dependency>
+   <groupId>org.mybatis</groupId>
+   <artifactId>mybatis</artifactId>
+   <version>3.4.5</version>
+</dependency>
+
+<dependency>
+    <groupId>org.assertj</groupId>
+    <artifactId>assertj-core</artifactId>
+    <version>3.9.1</version>
+</dependency>
  
     <dependency>
       <groupId>org.apache.maven.plugin-testing</groupId>
@@ -211,6 +208,12 @@
       <version>3.3.0</version>
       <scope>test</scope>
     </dependency>
+    
+   <!-- https://mvnrepository.com/artifact/org.testfx/testfx-junit -->
+
+    
+    
+    
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
@@ -264,21 +267,24 @@
     <artifactId>javax.servlet-api</artifactId>
     <version>4.0.1</version>
     <scope>provided</scope>
+    
+    
 </dependency>
-    
-    
+
+
+    <dependency>
+    	<groupId>org.testfx</groupId>
+    	<artifactId>testfx-junit5</artifactId>
+    	<version>4.0.16-alpha</version>
+    </dependency>
     </dependencies>
+    
+    
 
     <build>
         <plugins>
-    <plugin>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-maven-plugin</artifactId>
-        <version>0.0.5</version>
-        <configuration>
-            <mainClass>Main.java</mainClass>
-    	    </configuration>
-    		</plugin>
+       
+    		
     		
     		
     	
@@ -308,6 +314,7 @@
                 </archive>
             </configuration>
         </plugin>
+        <!--  -->
         <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jar-plugin</artifactId>
@@ -328,8 +335,15 @@
          	<version>3.7.0.1746</version>
        	</plugin>
         <plugin>
-             <artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+             <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>2.22.1</version>
+  <configuration>
+    <argLine>
+      --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+    </argLine>
+  </configuration>
+				
         </plugin>
             
             
